--- a/crm/WebRoot/menu.htm
+++ b/crm/WebRoot/menu.htm
@@ -153,11 +153,11 @@ A.active {
 											cellPadding=2 width=155 align=center border=0>
 											<TBODY>
 												<TR>
-													<TD class=menuSmall><A class=style2 href="linkmanServlet?method=add"
+													<TD class=menuSmall><A class=style2 href="${pageContext.request.contextPath}/addUI.action"
 														target=main>－ 新增联系人</A></TD>
 												</TR>
 												<TR>
-													<TD class=menuSmall><A class=style2 href="linkmanServlet?method=list"
+													<TD class=menuSmall><A class=style2 href="${pageContext.request.contextPath}/listUI.action"
 														target=main>－联系人列表</A></TD>
 												</TR>
 												
